--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     ]
   },
   "peerDependencies": {
-    "svelte": "^3 || ^4"
+    "svelte": "^3 || ^4 || ^5"
   },
   "devDependencies": {
     "@kiwi/eslint-config": "^2.2.8",
@@ -82,7 +82,7 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-dts": "^6.0.1",
     "rollup-plugin-esbuild": "^5.0.0",
-    "svelte": "^3.53.1 | 5.0.0-next.190",
+    "svelte": "^3.53.1 || 5.0.0-next.190",
     "svelte-preprocess": "^5.0.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
